--- a/k8s/backend-peer-deployment.yaml
+++ b/k8s/backend-peer-deployment.yaml
@@ -19,6 +19,13 @@ spec:
           imagePullPolicy: IfNotPresent
           ports:
             - containerPort: 5050
+          resources:
+            requests:
+              cpu: 100m
+              memory: 128Mi
+            limits:
+              cpu: 500m
+              memory: 256Mi
           env:
             - name: PUBNUB_USER_ID
               value: "blockchain-node-peer-1"
